--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,10 @@
             ]
         }
     },
+    "scripts": {
+        "test": "vendor/bin/phpunit",
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
+    },
     "config": {
         "sort-packages": true
     },
