--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=7.4.8"
+        "php": "^7.4.0"
     },
     "autoload": {
         "psr-4": {
